--- a/PSCIDemo/Pages/Index.cshtml
+++ b/PSCIDemo/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Github Actions demo.</p>
+    <p>Github Actions demo v2.</p>
 </div>
